--- a/config.properties
+++ b/config.properties
@@ -1,5 +1,5 @@
 url=http://www.saucedemo.com
-#Utilizar los siguientes nombres para los navegadores:
+#Use the next names to set browser. It need to be same to these names
 #Chrome
 #Firefox
 #Opera
