Add new property of screenshot

--- a/config.properties
+++ b/config.properties
@@ -7,3 +7,5 @@ url=http://www.saucedemo.com
 #Edge
 browser=Chrome
 evidence=C:/evidence/
+# Use 'true' or 'false' if you want to take screenshot or not
+screenshot=true
