--- a/pom.xml
+++ b/pom.xml
@@ -36,5 +36,11 @@
 		<artifactId>log4j</artifactId>
 		<version>1.2.17</version>
 	</dependency>
+    <dependency>
+        <groupId>io.qameta.allure</groupId>
+        <artifactId>allure-junit4</artifactId>
+        <version>2.13.1</version>
+        <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
